--- a/styling.css
+++ b/styling.css
@@ -1,16 +1,123 @@
-.agree_container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 30px;
+@import url('http://fonts.cdnfonts.com/css/halloween-spooky');
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
-.form-group{
-    width: 60vh;
+* {
+    box-sizing: border-box;
 }
 
-.agree_submit{
-    display:flex;
-    justify-content: space-evenly;
-    margin-top: 15px;
+body {
+    background: lightblue url("https://cdn.wallpapersafari.com/43/11/n3uDS4.jpg") no-repeat fixed center;
+}
+
+#regForm {
+    background: url("https://wallpapercave.com/wp/wp9477356.jpg");
+    margin: 100px auto;
+    color: white;
+    padding: 40px;
+    width: 70%;
+    min-width: 300px;
+}
+
+h1 {
+    text-align: center;
+}
+
+input {
+    padding: 10px;
+    width: 100%;
+    font-size: 17px;
+    font-family: Raleway;
+    border: 1px solid #aaaaaa;
+}
+
+/* Mark input boxes that gets an error on validation: */
+.invalid {
+    background-color: #ffdddd;
+}
+
+/* Hide all steps by default: */
+.tab {
+    display: block;
+}
+
+button {
+    background-color: #04AA6D;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 17px;
+    font-family: Raleway;
+    cursor: pointer;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+#prevBtn {
+    background-color: #bbbbbb;
+}
+
+/* Make circles that indicate the steps of the form: */
+.step {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbbbbb;
+    border: none;
+    border-radius: 50%;
+    display: inline-block;
+    opacity: 0.5;
+}
+
+.step.active {
+    opacity: 1;
+}
+
+/* Mark the steps that are finished and valid: */
+.step.finish {
+    background-color: #04AA6D;
+}
+
+.city {
+    display: none;
+}
+
+#city_span {
+    color: red;
+    font-size: x-large;
+}
+
+#imgPreview {
+    height: 5rem;
+    width: auto;
+
+}
+
+a:link {
+    text-decoration: none;
+    color: white;
+}
+
+
+a:visited {
+    text-decoration: none;
+    color: white;
+}
+
+
+a:hover {
+    text-decoration: none;
+    color: white;
+}
+
+
+a:active {
+    text-decoration: none;
+    color: white;
 }
