--- a/styling.css
+++ b/styling.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/halloween-spooky');
+@import url('https://fonts.googleapis.com/css2?family=League+Gothic&display=swap');
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -8,6 +8,7 @@ input::-webkit-inner-spin-button {
 
 * {
     box-sizing: border-box;
+    font-family: 'League Gothic', sans-serif;
 }
 
 body {
@@ -17,7 +18,6 @@ body {
 #regForm {
     background: url("https://wallpapercave.com/wp/wp9477356.jpg");
     margin: 100px auto;
-    color: white;
     padding: 40px;
     width: 70%;
     min-width: 300px;
@@ -25,6 +25,11 @@ body {
 
 h1 {
     text-align: center;
+}
+
+select {
+    width: 10rem;
+    font-size: large;
 }
 
 input {
@@ -135,9 +140,11 @@ a:active {
 input {
     border: none;
 }
+
 .icon {
     width: 0.7rem;
 }
+
 #agreeCheck {
     width: 5%;
     padding: 0;
