--- a/styling.css
+++ b/styling.css
@@ -21,6 +21,7 @@ body {
     padding: 40px;
     width: 70%;
     min-width: 300px;
+    font-size: 2rem;
 }
 
 h1 {
@@ -58,6 +59,7 @@ button {
     font-size: 17px;
     font-family: Raleway;
     cursor: pointer;
+    font-size: 1.5rem;
 }
 
 button:hover {
